# omnicommerce_cdn

./: README.md  pyproject.toml  requirements.txt
omnicommerce_cdn/: controller.py  hooks.py  modules.txt
omnicommerce_cdn/omnicommerce_cdn/doctype/cdn_file_attachment/: cdn_file_attachment.js  cdn_file_attachment.json  cdn_file_attachment.py  test_cdn_file_attachment.py
