[project]
name = "omnicommerce_cdn"
authors = [
    { name = "Crowdechain S.r.o", email = "developers@crowdechain.com"}
]
description = "Enhances Frappe-based websites  by seamlessly integrating with content delivery networks (CDNs).  Upload a variety of files effortlessly, and watch as they're distributed globally for optimized loading."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
